css/style.css
/* GENERAL AND RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Noto Sans', sans-serif;
}

li {
    list-style: none;
}

header {
    background-color: var(--headercolor);
    margin-bottom: 8rem;

}

footer {
    background-color: var(--footercolor);
    color: white;
}

select {
    color: var(--primarycolor);
    background-color: var(--footercolor);
    border: none;
}

a {
    display: inline-block;
    text-decoration: none;
}

/* WAVE STYLE UTILITY */
.wave {
    filter: opacity(0.04);
    background-color: url;
}

.rotate {
    transform: rotateX(180deg);
}

.wflex {
    display: flex;
    flex-flow: row wrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.marginb {
    margin-bottom: 4.5rem;
}

/* Color styles */
:root {
    --primarycolor: #FFFFFF;
    --bg-secondarycolor: #f6f6f6;
    --brandcolor: #7289DA;
    --footercolor: #23272A;
    --headercolor: #255EE9;
}

/* FLEX RULES */
.dh-flex {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: flex-start;
    overflow: hidden;
    text-overflow: ellipsis;
}

.dm-flex {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: flex-start;
    overflow: hidden;
    text-overflow: ellipsis;
}

.df-flex {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    overflow: hidden;
    text-overflow: ellipsis;
}

.reverse {
    flex-flow: row-reverse wrap;
}


/* MAIN HEADER TITLE */
.header-content h1 {
    font-size: 2.8rem;
}

/* MAIN HEADER CONTENT */

.headerstyle {
    width: 80%;
    margin: 0 auto;
    padding-top: 1.3rem;
    padding-bottom: 3rem;
    color: var(--primarycolor)
}

.headerstyle a:not(.loginheader) {
    padding-left: 3rem;
}

.header-content {
    max-width: 40%;
    margin: 0 auto;
}


.header-content p {
    padding-top: 1.5rem;
    padding-bottom: 1.0rem;
    line-height: 1.8rem;
    font-size: 18px;

}

/* HEADER NAVIGATION LINKS COLOR */
.dh-flex ul li a {
    color: var(--primarycolor);
}

/* added to not break padding when resizing page */
.header-content a {
    display: inline-block;
    margin-bottom: 1.1rem;
}

.jumbotron {
    background-image: url("../img/jumbo.png");
    background-size: cover;
    text-align: center;
    padding-top: 5rem;
    color: var(--primarycolor);
    flex-wrap: wrap;
    padding-bottom: 16rem;
}

/* BUTTON */

.buttonstyle {
    padding: 1.1em;
    border-radius: 2rem;
    font-size: 1.1em;
    font-weight: 500;
}

/* OTHER STYLE OF BUTTONS */
.macheader {
    background-color: var(--primarycolor);
    color: var(--footercolor)
}

.browserheader {
    background-color: var(--footercolor);
    color: var(--primarycolor);
    margin-left: 1.5rem;
}

.loginheader {
    background-color: var(--primarycolor);
    color: var(--footercolor);
    text-align: center;
    display: inline-block;
    padding: 0.8rem;
    font-size: 0.9rem;
}

.macmainstyle {
    background-color: var(--brandcolor);
    color: var(--primarycolor);
    padding: 0.8rem;
}

/* BUTTON HOVER EFFECTS */

.macheader:hover,
.loginheader:hover {
    color: var(--brandcolor);
}

.buttonstyle:hover {
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

ul li a:hover {
    text-decoration: underline;
}


/* MAIN SECTION */
.textitem {
    max-width: 20%;
}

.textitem h2 {
    font-size: 2.8rem;
    padding-bottom: 1.1rem;
    padding-top: 1.3rem;
}

.imgitem {
    padding-right: 1.5rem;
}

.even {
    background-color: var(--bg-secondarycolor);
}

/* LAST MAIN SECTION STYLE */
.lastsection {
    width: 50%;
    margin: 0 auto;
    padding: 5rem 0 10rem 0;
    text-align: center;
    background-image: url(../img/stars.svg);
    background-repeat: no-repeat;
    background-position: 176px 42px;
    overflow: hidden;
    text-overflow: ellipsis;

}

.lastsection h3 {
    padding-bottom: 3rem;
    font-size: 1.8rem;
}

/* TOPFOOTER SECTION */

.topfooter {
    padding-top: 4rem;
}

.centered {
    width: 80%;
    margin: 0 auto;
}

.topfooter a {
    color: var(--primarycolor);
    font-size: 0.9rem;
    padding-top: 0.5rem;

}

/* MAIN ANCHOR OF EVERY NAV LIST */
.topfooter {
    padding-bottom: 3rem;
    border-bottom: 1px solid var(--brandcolor);

}

.topfooter .titlefooter {
    color: var(--brandcolor);
}

.bottomfooter {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    padding-top: 1.3rem;
    padding-bottom: 1.5rem;

}

/* SOCIAL SECTION WIDTH */
.langsocial {
    width: 13%;
}

/* TITLE STYLE SOCIAL SECTION */
.langsocial h5 {
    font-size: 1.5rem;
    line-height: 30px;
}

#flagita {
    width: 20px;

}

.register {
    font-size: 0.7rem;
    border-radius: 30px;
    padding: 10px 17px 10px 17px;

}

/* SOCIAL ITEMS */
.fa-brands {
    padding-right: 20px;
    padding-top: 15px;
}

/* DOWNLOAD PAGE (BONUS) */

:root {
    --primarydc: #23272a;

}
/* BACKGROUND HEADER */
#downloadheader {
    background-color: var(--primarydc);
    color: white;
}
/* TEXT STYLE HEADER */
.textheader {
    display: inline-block;
    width: 35%;
    margin-left: 11.5rem;
    margin-top: 3rem;

}
/* TITLE STILE HEADER */
.textheader h1 {
    font-size: 56px;
    line-height: 58px;
}
/* DESCRIPTION STYLE HEADER */
.textheader p {
    margin: 2rem 0rem 2rem 0;
    margin-top: 3rem;
}
/* BOX OS WINDOWS */
.osinfo {
    padding-left: 2rem;
}


/* CONTAINER IMG */
.imgheader {
    width: 43%;
    float: right;
}

/* SVG DIMENSION */
.imgheader img {
    width: 667px;
    height: 461px;
    ;
}

.clearfix::after {
    display:table;
    content:"";
    clear:both;
}

